--- a/_config.yml
+++ b/_config.yml
@@ -4,13 +4,11 @@
 
 title: blank # the website title (if blank, full name will be used instead)
 first_name: Marcelo
-middle_name: A.
+middle_name:
 last_name: Álvarez
-contact_note: >
-  You can even add a little note about which of these is the best way to reach you.
-description: > # the ">" symbol means to ignore newlines until "footer_text:"
-  A simple, whitespace theme for academics. Based on [*folio](https://github.com/bogoli/-folio) design.
-footer_text: >
+contact_note:
+description:
+footer_text:
 keywords: architecture, computational-design, georgia-tech # add your own keywords or leave empty
 lang: en # the language of your site (for example: en, fr, cn, ru, etc.)
 icon: 🔘 # the emoji used as the favicon (alternatively, provide image name in /assets/img/)
@@ -52,7 +50,7 @@ socials_in_search: true
 bib_search: true
 
 # Dimensions
-max_width: 1000px
+max_width: 920px
 
 # TODO: add layout settings (single page vs. multi-page)
 
@@ -137,20 +135,6 @@ newsletter:
   # https://loops.so/docs/forms/custom-form
 
 # -----------------------------------------------------------------------------
-# Collections
-# -----------------------------------------------------------------------------
-
-collections:
-  news:
-    defaults:
-      layout: post
-    output: true
-    permalink: /:collection/:title/
-  projects:
-    output: true
-    permalink: /:collection/:title/
-
-# -----------------------------------------------------------------------------
 # Jekyll settings
 # -----------------------------------------------------------------------------
 
@@ -189,6 +173,8 @@ exclude:
   - README.md
   - readme_preview/
   - vendor
+  - assets/jupyter/blog.ipynb
+  - _news/announcement_*.md
 keep_files:
   - CNAME
   - .nojekyll
