--- a/.github/workflows/deploy.yml
+++ b/.github/workflows/deploy.yml
@@ -71,21 +71,21 @@ jobs:
       - name: Setup Ruby 💎
         uses: ruby/setup-ruby@v1
         with:
-          ruby-version: "3.3.5"
+          ruby-version: '3.2'
           bundler-cache: true
       - name: Update Bundler
         run: gem update --system && gem install bundler
       - name: Setup Python 🐍
         uses: actions/setup-python@v5
         with:
-          python-version: "3.13"
-          cache: "pip"
+          python-version: '3.13'
+          cache: 'pip'
       - name: Update _config.yml ⚙️
         uses: fjogeleit/yaml-update-action@main
         with:
           commitChange: false
-          valueFile: "_config.yml"
-          propertyPath: "giscus.repo"
+          valueFile: '_config.yml'
+          propertyPath: 'giscus.repo'
           value: ${{ github.repository }}
       - name: Install and Build 🔧
         run: |
