--- a/.github/workflows/deploy.yml
+++ b/.github/workflows/deploy.yml
@@ -74,11 +74,13 @@ jobs:
           ruby-version: '3.2'
           bundler-cache: true
       - name: Update Bundler
-        run: gem update --system && gem install bundler
+        run: |
+            gem update --system
+            gem install bundler
       - name: Setup Python 🐍
         uses: actions/setup-python@v5
         with:
-          python-version: '3.13'
+          python-version: '3.10'
           cache: 'pip'
       - name: Update _config.yml ⚙️
         uses: fjogeleit/yaml-update-action@main
@@ -89,8 +91,9 @@ jobs:
           value: ${{ github.repository }}
       - name: Install and Build 🔧
         run: |
-          sudo apt-get update && sudo apt-get install -y imagemagick
-          pip3 install --upgrade nbconvert
+          sudo apt-get update
+          sudo apt-get install -y imagemagick
+          pip install --upgrade nbconvert
           export JEKYLL_ENV=production
           bundle install
           bundle exec jekyll build --trace
