--- a/_config.yml
+++ b/_config.yml
@@ -6,14 +6,14 @@ title: blank # the website title (if blank, full name will be used instead)
 first_name: Marcelo
 middle_name:
 last_name: Álvarez
-contact_note:
-description:
-footer_text:
+#contact_note:
+#description:
+#footer_text:
 keywords: architecture, computational-design, georgia-tech # add your own keywords or leave empty
 lang: en # the language of your site (for example: en, fr, cn, ru, etc.)
 icon: 🔘 # the emoji used as the favicon (alternatively, provide image name in /assets/img/)
 
-url: https://alvarezdmarch.github.io # the base hostname & protocol for your site
+url: http://www.alvarezdm.me/ # the base hostname & protocol for your site
 baseurl: # the subpath of your site, e.g. /blog/. Leave blank for root
 last_updated: false # set to true if you want to display last updated in the footer
 impressum_path: # set to path to include impressum link in the footer, use the same path as permalink in a page, helps to conform with EU GDPR
@@ -117,13 +117,13 @@ disqus_shortname: # put your disqus shortname
 # External sources.
 # If you have blog posts published on medium.com or other external sources,
 # you can display them in your blog by adding a link to the RSS feed.
-external_sources:
-  - name: #medium.com
-    rss_url: #https://medium.com/@al-folio/feed
-  - name: #Google Blog
-    posts:
-      - url: #https://blog.google/technology/ai/google-gemini-update-flash-ai-assistant-io-2024/
-        published_date: #2024-05-14
+#external_sources:
+#  - name: #medium.com
+#    rss_url: #https://medium.com/@al-folio/feed
+#  - name: #Google Blog
+#    posts:
+#      - url: #https://blog.google/technology/ai/google-gemini-update-flash-ai-assistant-io-2024/
+#        published_date: #2024-05-14
 
 # -----------------------------------------------------------------------------
 # Newsletter
